--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.20.5",
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~50.0.6",
-    "expo-font": "~11.10.2",
+    "expo": "~50.0.7",
+    "expo-blur": "~12.9.2",
+    "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
+    "expo-location": "^16.5.3",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~3.4.7",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -26,9 +34,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "twrnc": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
